--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                         </div>
                         <div class = "zeroPeriodContainer">
                             <button class = "numButton zero button">0</button>
-                            <button class = "period button">.</button>
+                            <button class = "numButton period button">.</button>
                         </div>
                     </div>
                     <div class = "rightContainer">
                         <div class = "operatorsContainer">
-                            <button class = "operator addition button">+</button>
-                            <button class = "operator subtraction button">-</button>
-                            <button class = "operator multiply button">*</button>
-                            <button class = "operator division button">/</button>
+                            <button class = "numButton operator addition button">+</button>
+                            <button class = "numButton operator subtraction button">-</button>
+                            <button class = "numButton operator multiply button">*</button>
+                            <button class = "numButton operator division button">/</button>
                         </div>
                     </div>
                 </div>
