Add id for if else statement

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     </div>
                     <div class = "rightContainer">
                         <div class = "operatorsContainer">
-                            <button class = "numButton operator addition button">+</button>
-                            <button class = "numButton operator subtraction button">-</button>
-                            <button class = "numButton operator multiply button">*</button>
-                            <button class = "numButton operator division button">/</button>
+                            <button id = 'add' class = "numButton operator addition button">+</button>
+                            <button id = 'subtract'class = "numButton operator subtraction button">-</button>
+                            <button id = 'multiply' class = "numButton operator multiply button">*</button>
+                            <button id = 'divide' class = "numButton operator division button">/</button>
                         </div>
                     </div>
                 </div>
